# Model2Kernel

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
HFProbe/: config_agent_vllm.py  framework.py  kernel_map_vllm.json  run_vllm.py  utils.py  vllm_kernel_mock.py  wrapper.py
HFProbe/hf_map/: kernel_map_BechirTrabelsi1_Falcon_OPT.json  kernel_map_FreedomIntelligence_Apollo-72B.json  kernel_map_L1-m1ng_qwen-7b-inf.json  kernel_map_Qwen_Qwen-14B-Chat-Int4.json  kernel_map_Qwen_Qwen-14B-Chat-Int8.json  kernel_map_Qwen_Qwen-14B-Chat.json  kernel_map_Qwen_Qwen-14B.json  kernel_map_Qwen_Qwen-1_8B-Chat-Int4.json  kernel_map_Qwen_Qwen-1_8B-Chat-Int8.json  kernel_map_Qwen_Qwen-1_8B-Chat.json  kernel_map_Qwen_Qwen-1_8B.json  kernel_map_Qwen_Qwen-72B-Chat-Int4.json  kernel_map_Qwen_Qwen-72B-Chat-Int8.json  kernel_map_Qwen_Qwen-72B-Chat.json  kernel_map_Qwen_Qwen-72B.json  kernel_map_Qwen_Qwen-7B-Chat-Int4.json  kernel_map_Qwen_Qwen-7B-Chat-Int8.json  kernel_map_Qwen_Qwen-7B-Chat.json  kernel_map_Qwen_Qwen-7B.json  kernel_map_TitanML_Qwen-14B.json  kernel_map_TitanML_Qwen-72B-Chat.json  kernel_map_TitanML_Qwen-7B-Chat-Int4.json  kernel_map_TitanML_Qwen-7B-Chat-Int8.json  kernel_map_TitanML_Qwen-7B-Chat.json  kernel_map_TitanML_Qwen-7B.json  kernel_map_Xfgll_RuleGPT.json  kernel_map_chinoll_chatsakura-3b-int4.json  kernel_map_chinoll_chatsakura-3b-int8.json  kernel_map_gcx_qwen-test.json  kernel_map_huskyhong_noname-ai-v2-light.json  kernel_map_huskyhong_noname-ai-v2_2-light.json  (+36 more)
klee/: CMakeLists.txt
scripts/: compile.py  run_cuKLEE.py
src/: main.cpp
(+136 files in other folders)
